tests/Rules/Structure/Fixtures/invalid/multiple_nav_no_labels.html.twig
{# 1 errors #}
<nav></nav>
<nav></nav>
